--- a/style.css
+++ b/style.css
@@ -61,9 +61,11 @@ nav .right a span{
   justify-content: space-between;
   align-items: center;
   padding: 0 50px;
-  margin: 50px 0;
+  margin: 100px 0;
   gap: 40px;
   margin-bottom: 100px;
+  
+  
 }
 .hero-section .text p{
   flex: 5;
@@ -115,6 +117,7 @@ nav .right a span{
 .photography-section{
   padding: 0 50px;
   margin-bottom: 100px;
+  margin-top: 150px;
 }
 
 .photography-section h2{
@@ -290,6 +293,46 @@ nav .right a span{
 .contact-section .group form button:hover{
   filter: brightness(.9);
 }
+/* ABOUT ME */
+.about-me{
+  padding: 0 50px;
+  margin-bottom: 100px;
+}
+
+.about-me h2{
+  text-align: center;
+  font-size: 35px;
+  margin-bottom: 20px;
+}
+
+.about-me .text{
+  text-align: center;
+  margin-bottom: 20px;
+}
+.about-me .text p{
+  flex: 5;
+  font-size: 18px;
+  max-width: 900px;
+  margin: auto;
+}
+.about-me .text .traveldiarylink{
+  margin-top: 25px;
+}
+
+.about-me .text .traveldiarylink a{
+  display: inline-block;
+  padding: 5px 10px;
+  border: 2px solid var(--link-color);
+  border-radius: 5px;
+  margin-right: 10px;
+  margin-bottom: 10px;
+  transition: .1s;
+}
+
+.about-me .text .traveldiarylink a:hover{
+  color: var(--text-color);
+  border: 2px solid var(--text-color);
+} 
 
 
 @media (max-width: 850px){
@@ -345,9 +388,12 @@ nav .right a span{
     padding: 0 20px ;
   }
     /* SECTION 5 CONTACT */
-    .contact-section{
+  .contact-section{
       padding: 0 20px;
     }
+  .about-me{
+    padding: 020px;
+  }
 }
 /* PHOTO GALLERY PAGE */
 
@@ -403,4 +449,51 @@ nav .right a span{
 .photo:hover .caption {
   opacity: 1;
   transform: translateY(0);  /* slide up into view */
+}
+
+/* TRAVEL DIARY PAGE */
+
+.travel-postcards .photos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;   
+  gap: 20px;                
+  padding: 0 20px;
+  align-items: flex-start;
+}
+
+
+
+/* One image + caption */
+.postcard {
+  text-align: center;        /* center the caption text */
+}
+
+/* Image */
+.postcard img {
+  display: block;
+  height: 300px;             /* keep consistent height */
+  width: auto;               /* maintain aspect ratio */
+  object-fit: cover;
+  margin: 0 20px;            /* center the image itself */
+  box-shadow: 2px 2px 8px #8a8a8a;
+  
+}
+/* Caption wrapper */
+.postcard-caption {
+  margin-top: 8px;           /* space between image and caption */
+  font-size: 22px;
+  line-height: 1.4;
+  margin-bottom: 20px;
+}
+
+/* Caption link */
+.postcard-caption a {
+  color: #333;
+  text-decoration: none;
+}
+
+.postcard-caption a:hover,
+.postcard-caption a:focus {
+  text-decoration: underline;
 }
